--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=ImplRabbitMQ-SpringBoot-Demo
-
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
 #spring.rabbitmq.password=guest
+rabbitmq.queue.name=javaguides
+rabbitmq.exchange.name=javaguides_exchange
+rabbitmq.routing.name=javaguides_routing_key
