--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=ImplRabbitMQ-SpringBoot-Demo
+server.port=8081
+
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.username=guest
