Configure RabbitMQ for JSON Message Communication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.port=8081
 rabbitmq.queue.name=javaguides
 rabbitmq.exchange.name=javaguides_exchange
 rabbitmq.routing.name=javaguides_routing_key
+rabbitmq.queue.json.name=javaguides_json
+rabbitmq.routing.json.key=javaguides_routing_json_key
